--- a/APM-Start/src/app/products/product-detail.component.html
+++ b/APM-Start/src/app/products/product-detail.component.html
@@ -56,7 +56,8 @@
 
     <div class="panel-footer">
         <a class="btn btn-default"
-            [routerLink]="['/products']">
+            [routerLink]="['/products']"
+            [queryParamsHandling]="preserve">
             <i class="glyphicon glyphicon-chevron-left"></i> Back
         </a>
         <a class="btn btn-primary" 
