preserve queryParams on productList page

--- a/APM-Start/src/app/products/product-detail.component.html
+++ b/APM-Start/src/app/products/product-detail.component.html
@@ -57,7 +57,7 @@
     <div class="panel-footer">
         <a class="btn btn-default"
             [routerLink]="['/products']"
-            [queryParamsHandling]="preserve">
+            [preserveQueryParams]="true">
             <i class="glyphicon glyphicon-chevron-left"></i> Back
         </a>
         <a class="btn btn-primary" 
